<resources>
    <string name="app_name">StayHealthy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stay_healthy">Stay Healthy</string>
    <string name="text_1">In today\'s fast-paced world, staying healthy isn\'t just a choice—it\'s a necessity. From sedentary lifestyles to constant exposure to screens and stress, modern living presents numerous challenges that can impact our health negatively. \n\nHowever, amidst these challenges lies an opportunity to prioritize our well-being. \n\nBy adopting habits that promote physical fitness, mental resilience, and balanced nutrition, we empower ourselves to navigate life\'s complexities with vitality and resilience. Let\'s embrace the journey to staying healthy, ensuring we thrive in every aspect of our lives.</string>
    <string name="text_2">Working out is just one step when it comes to staying healthy. Regular exercise helps build strength, improve cardiovascular health, and boost overall energy levels. However, maintaining a balanced diet, getting adequate sleep, managing stress, and staying hydrated are equally crucial. Combining physical activity with healthy lifestyle choices can significantly enhance your well-being and longevity.</string>
    <string name="text_3">Food plays a critical role in maintaining overall health and well-being. A balanced diet provides the essential nutrients our bodies need to function optimally, including vitamins, minerals, proteins, and healthy fats. \n\nProper nutrition supports immune function, promotes healthy growth and development, and helps prevent chronic diseases such as diabetes, heart disease, and obesity. By making mindful food choices, you can fuel your body for daily activities and long-term health.</string>
    <string name="text_4">Sleep is essential for overall health and well-being. Quality sleep allows the body to repair and regenerate, supports cognitive function, and boosts immune health. \n\nConsistent, restful sleep helps maintain emotional balance, reduces the risk of chronic diseases, and enhances daily performance and productivity. \n\nPrioritizing good sleep hygiene is crucial for achieving optimal physical and mental health.</string>
    <string name="text_5">Massage therapy, hijama (cupping therapy), and other spa treatments offer numerous health benefits. These therapies can reduce stress, alleviate pain, and improve circulation. \n\nMassage helps relax muscles, enhances flexibility, and promotes better sleep. \n\nHijama, an ancient practice, is believed to detoxify the body and relieve muscle tension. \n\nRegular spa treatments can also boost mental well-being, reduce anxiety, and provide a sense of rejuvenation and relaxation, contributing to overall health and vitality.</string>
    <string name="text_6">Without further ado, explore gyms and all kinds of healthy treatments in city Sarajevo</string>
    <string name="gyms">Gyms</string>
    <string name="location">Location</string>
</resources>